# libsuci

./: CMakeLists.txt  README.md  meson.build
inc/: ec_xg.h  suci_calcs.h  suci_test.h  suci_utils.h  sucic_calcs.h  sucic_test.h  sucic_utils.h
res/: ec-priv-hnkey.der
src/: ec_xg.c  main.c  suci_calcs.c  suci_test.c  suci_utils.c  sucic_calcs.c  sucic_test.c  sucic_utils.c
